--- a/FideleWeb/appsettings.json
+++ b/FideleWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.100.8;Database=fidele;User=root;Password=web1fidele"
+  }
 }
